--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>jackbox</title>
 <link href="../css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
@@ -62,6 +62,6 @@
 </div>
 <img src="maxresdefault2.jpg" width="800" height="127" alt="" class="gameover"/><script src="js/jquery-3.0.0.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script src="js/js.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
